@@ -1,3 +1,9 @@
+2011-09-04  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/apps-menu.jl: Fixed failing to generate
+	apps-menu when .desktop-files have a Category property, but no
+	Categories property (Category isn't even expected to exist).
+	-- [Matthew Love]
+
 2011-07-26  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/int/kde.jl
 	* lisp/sawfish/wm/int/gnome.jl
